<android.support.v7.widget.CardView
    android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="4dp"

    card_view:cardUseCompatPadding="true"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff">
        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginLeft="16dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"/>
        <LinearLayout
            android:id="@+id/cardLinear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/cardImage">
            <TextView
                android:id="@+id/labelHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/cardCount"
                android:textColor="#000"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/cardDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/cardCount"
                android:textColor="#000"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cardLinear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/cardLinear1"
            android:layout_toRightOf="@+id/cardImage">
            <TextView
                android:id="@+id/labelLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/cardLicensePlate"
                android:textColor="#000"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/cardLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/cardLicensePlate"
                android:textColor="#000"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cardLinear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardLinear2"
            android:layout_toRightOf="@+id/cardImage">
            <TextView
                android:id="@+id/labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/cardDate"
                android:textColor="#000"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/cardDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/cardCount"
                android:textColor="#000"
                android:textSize="14sp"/>
        </LinearLayout>


        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/getDealBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardLinear3"
            android:textColor="#FFFFFF"
            android:background="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/cardButton"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>